# my-site

./: .dockerignore  Cargo.toml  README.md  docker-compose.yaml  flake.nix
.github/workflows/: build.yaml  generator.build.yaml  web.build.yaml
generator/: Cargo.toml  Dockerfile  build.rs
generator/src/: blog_entry.rs  config.rs  css.rs  generator.rs  git_repo.rs  lib.rs  main.rs  markdown.rs  static_dir.rs
generator/src/pages/: article.rs  base.rs  blog.rs  blog_list.rs  blog_page.rs  body.rs  commits.rs  markdown_page.rs  mod.rs
generator/static/css/: article.css  base.css  blog.css  main.css  syntect.css
generator/tests/: test-1.md  test-2.md
static/css/: article.css  blog.css  footer.css  main.css  nav.css  reset.css
web/: Cargo.toml  Dockerfile  README.md
web/src/: main.rs
