[package]
name = "my-site-generator"
version = "0.1.0"
license = "MIT"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"

comrak = { version = "0.41.0", features = ["bon", "shortcodes"] }
hypertext = { version = "0.12.1", features = ["axum", "htmx"] }

git2 = "0.20.2"
rss = { version = "2.0.12", features = ["atom"] }
lightningcss = "1.0.0-alpha.67"
minify-html = "0.16.4"

normalize-path = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
url = "2.5.7"
chrono = "0.4.41"

hotwatch = "0.5.0"

[dev-dependencies]
tempfile = "3"
