[package]
name = "my-site-generator"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0"

log = "0.4"
env_logger = "0.11"

comrak = { version = "0.49.0", features = ["bon", "shortcodes", "syntect"] }
syntect = "5.3.0"
hypertext = { version = "0.12.1", features = ["axum", "htmx"] }

git2 = "0.20.2"
rss = { version = "2.0.12", features = ["atom"] }
minify-html = "0.18.1"
ignore = "0.4.25"

normalize-path = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = "0.4.41"
include_dir = "0.7.4"

[build-dependencies]
anyhow = "1.0"
lightningcss = "1.0.0-alpha.67"

[dev-dependencies]
tempfile = "3"
